[tool.poetry]
name = "wyd2encdec"
version = "0.1.0"
description = ""
authors = ["Raphael Tomé Santana <raphaelts3@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scapy = "^2.5.0"
click = "^8.1.7"
asyncclick = "^8.1.3.4"
anyio = "^4.0.0"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
taskipy = "*"
ruff = "*"
mypy = "*"

[tool.poetry.scripts]
encdec = "wyd2encdec.__main__:main"

[tool.taskipy.tasks]
lint = "ruff check wyd2encdec"
check_types = "mypy ."
fmt = "black . && isort --profile=black ."
check_fmt = "black --check . && isort --profile=black --check ."
check = "task lint && task check_fmt && task check_types"

[tool.black]
extend-exclude = "/(snapshots|docs|.ipynb$)/"

[tool.isort]
profile = "black"
multi_line_output = 3
skip = "tests/snapshots,snapshots,docs,.git"
lines_between_sections = 1

[tool.ruff]
select = ["E", "F", "I"]

[build-system]
requires = ["poetry>=1.3.2"]
build-backend = "poetry.core.masonry.api"
